[package]
name = "rgeocache-server"
version = "0.1.0"
edition = "2021"
description = "Low-memory reverse geocoding server (v2 cache, mmap-only)"

[[bin]]
name = "rgeocache-server"
path = "src/main.rs"

[features]
default = ["metrics"]
metrics = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
# Web framework
ntex = { version = "2", features = ["compio", "compress"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Memory-mapped files
memmap2 = "0.9"

# Protobuf
prost = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }

# Geometry
geo = "0.28"
rstar = "0.12"

# Metrics (always available, always compiled)
prometheus = { version = "0.13", features = ["process"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Tracing (feature-gated)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[build-dependencies]
prost-build = "0.13"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
