[package]
name = "rgeocache-server"
version = "0.1.0"
edition = "2021"
description = "Low-memory reverse geocoding server (v2 cache, mmap-only)"

[[bin]]
name = "rgeocache-server"
path = "src/main.rs"

[features]
default = ["metrics", "tokio"]
metrics = []
tokio = ["ntex/tokio"]
compio = ["ntex/compio"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
# Web framework
ntex = { version = "3.10", features = ["compress"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Memory-mapped files
memmap2 = "0.9"
# Zero-copy binary parsing from mmap
zerocopy = { version = "0.8", features = ["derive"] }
# Protobuf
prost = "0.14"
# CLI
clap = { version = "4", features = ["derive"] }
# Geometry
geo = "0.33"
rstar = "0.13"
# Multiprocessing for multiaddress handler
rayon = "1.12.0"
async-rayon = "0.1.0"
futures = "0.3.32"
async-stream = "0.3.6"

# Metrics (always available, always compiled)
prometheus = { version = "0.14", features = ["process"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Tracing (feature-gated)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }


[build-dependencies]
prost-build = "0.14"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
lto = false
